--- a/frontEndModerno/vue/scrimbaProject1/package.json
+++ b/frontEndModerno/vue/scrimbaProject1/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "vue": "^3.5.18"
   },
   "devDependencies": {
